--- a/chani.html
+++ b/chani.html
@@ -6,5 +6,8 @@
     <h1>chanikya's first git hub program implementation</h1>
     <hr>
     <p> chanikya is a good boy...... Chanakya was a philosopher, jurist, and royal advisor. His original name was Vishnu Gupta yet he is recognized for his pen name Kautilya. He wrote 'Arthashastra' on the Science of Politics and Economics between the 2nd century BCE and 3rd century CE. He wrote books on many things such as ethics and statecraft.</p>
-  </body>
+  <hr>
+
+<h3>updated from mc2</h3>
+</body>
 </html>
